Fix mobile layout issues with footer

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,13 @@
   --p-primary-color: #502379;
 }
 
+html {
+  height: 100%;
+}
+
 #app {
+  position: relative;
+  min-height: 100vh;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
